# Atelier-SISE-MlFlow_orchestrator

./: .dockerignore  .env.example  .gitignore  Dockerfile.dagster  Dockerfile.prefect  README.md  docker-compose.yml  generate_sample_data.py  pyproject.toml  requirements.txt
dagster_home/: dagster.yaml  workspace.yaml
data/: customer_data.csv
docs/: README_DOCKER.md  mlflow_cheatsheet.md
docs/prefect/: deployment_approaches.md
notebooks/: 01_messy_notebook.ipynb  01b_mlflow_transition.ipynb  02_mlflow_organized.ipynb
pipelines/examples/: Airflow_ML_Pipeline.py  Dagster_ML_Pipeline.py  Prefect_ML_Pipeline.py
pipelines/workshop/: orchestrator_guide.md
pipelines/workshop/01_airflow/: Airflow_Pipeline.py  airflow_overview.md
pipelines/workshop/02_prefect/: Prefect_Exercises.py  Prefect_Exercises_correction.py  Prefect_Workshop.py
pipelines/workshop/03_dagster/: Dagster_Exercises.py  Dagster_Exercises_correction.py  Dagster_Pipeline.py  Dagster_Workshop.py
pipelines/workshop/airflow/: airflow_overview.md
pipelines/workshop/dagster/: Dagster_Workshop.py
pipelines/workshop/prefect/: Prefect_Workshop.py
