[project]
name = "mlflow-orchestrators-workshop"
version = "1.0.0"
description = "MLflow + Orchestrators Workshop - Master 2 SISE"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    # Core Data Science
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "ipykernel>=6.25.0",

    # MLflow
    "mlflow>=2.9.0",

    # Data formats
    "pyarrow>=14.0.0",
]

[project.optional-dependencies]
# Orchestrators (install separately as needed)
prefect = ["prefect>=2.14.0"]
dagster = ["dagster>=1.5.0", "dagster-webserver>=1.5.0"]
airflow = ["apache-airflow>=2.7.0"]

# All orchestrators
orchestrators = [
    "prefect>=2.14.0",
    "dagster>=1.5.0",
    "dagster-webserver>=1.5.0",
]

# Jupyter (for local notebook development)
jupyter = [
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "ipykernel>=6.25.0",
]

# Everything
all = [
    "prefect>=2.14.0",
    "dagster>=1.5.0",
    "dagster-webserver>=1.5.0",
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "ipykernel>=6.25.0",
]

[tool.uv]